--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body style="background-color:rgb(0,150,0);">
     <div>
-        <img src="sourse/cactus.jpg" alt="仙人掌" width="180">
+        <img src="cactus.jpg" alt="仙人掌" width="180">
         <a href="cactus.html">仙人掌咒語</a>
     </div>
 </body>
