--- a/網頁設計/index.html
+++ b/網頁設計/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的第一個仙人掌網頁www</title>
+    <title>仙人掌網頁</title>
 </head>
 <body style="background-color:rgb(0,150,0);">
     <div>
