--- a/網頁設計/cactus.html
+++ b/網頁設計/cactus.html
@@ -18,7 +18,7 @@
     仙人掌仙人掌仙人掌仙人掌仙人掌仙人掌仙人掌仙人掌仙人掌<br>
     仙人掌仙人掌仙人掌仙人掌仙人掌仙人掌仙人掌仙人掌仙人掌<br>
     仙人掌仙人掌仙人掌仙人掌仙人掌仙人掌仙人掌仙人掌仙人掌<br>
-    <div>
+    <div style="text-align: center;">
         <a href="normal.html"> 一般的仙人掌 </a>
         <a href="ffcactus.html"> 不一般的仙人掌 </a>
     </div>
