--- a/網頁設計/cactus.html
+++ b/網頁設計/cactus.html
@@ -19,7 +19,7 @@
     仙人掌仙人掌仙人掌仙人掌仙人掌仙人掌仙人掌仙人掌仙人掌<br>
     仙人掌仙人掌仙人掌仙人掌仙人掌仙人掌仙人掌仙人掌仙人掌<br>
     <div style="text-align: center; margin-top:30px">
-        <a href="normal.html"> 一般的仙人掌 </a><br>
+        <a href="normal.html"> 一般的仙人掌 &nbsp &nbsp </a>
         <a href="ffcactus.html"> 不一般的仙人掌 </a>
     </div>
 </body>
