--- a/網頁設計/normal.html
+++ b/網頁設計/normal.html
@@ -1,1 +1,12 @@
-<img src="normal1.jpg" width=190px>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    一般的仙人掌
+</head>
+<body>
+    <div>
+        <img src="normal1.jpg" width=190px>
+        <img src="normal2.jpg" width=190px>
+    </div>
+</body>
+</html>
