--- a/網頁設計/normal.html
+++ b/網頁設計/normal.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <div>
-        <img src="sourse/normal1.jpg" width=190px>
-        <img src="sourse/normal2.jpg" width=190px>
+        <img src="sourse/normal1.jpg" width="190">
+        <img src="sourse/normal2.jpg" width="190">
     </div>
 </body>
 </html>
