--- a/網頁設計/ffcactus.html
+++ b/網頁設計/ffcactus.html
@@ -7,9 +7,9 @@
 </head>
 <body style="background-color:rgb(50,70,30);">
     <div>
-        <img src="sourse/ffcactus1.jpg" alt="仙人掌" width="180">
-        <img src="sourse/ffcactus2.jpg" alt="仙人掌" width="180">
-        <img src="sourse/ffcactus3.jpg" alt="仙人掌" width="180">
+        <img src="sourse/ff-cactus1.jpg" alt="仙人掌" width="180">
+        <img src="sourse/ff-cactus2.jpg" alt="仙人掌" width="180">
+        <img src="sourse/ff-cactus3.jpg" alt="仙人掌" width="180">
     </div>
 </body>
 </html>
