--- a/網頁設計/ffcactus.html
+++ b/網頁設計/ffcactus.html
@@ -6,10 +6,10 @@
     <title>不一般的仙人掌</title>
 </head>
 <body style="background-color:rgb(50,70,30);">
-    <div>
-        <img src="sourse/ff-cactus1.jpg" alt="仙人掌" width="180">
-        <img src="sourse/ff-cactus2.jpg" alt="仙人掌" width="180">
-        <img src="sourse/ff-cactus3.jpg" alt="仙人掌" width="180">
+    <div align="center">
+        <img src="sourse/ff-cactus1.jpg" alt="仙人掌" width="270">
+        <img src="sourse/ff-cactus2.jpg" alt="仙人掌" width="270">
+        <img src="sourse/ff-cactus3.jpg" alt="仙人掌" width="270">
     </div>
 </body>
 </html>
