--- a/網頁設計/normal.html
+++ b/網頁設計/normal.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
     <title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         一般的仙人掌
     </title>
 </head>
-<body>
+<body style="background-color:rgb(50,70,30);">
     <div>
-        <img src="sourse/normal1.jpg" width="190">
-        <img src="sourse/normal2.jpg" width="190">
+        <img src="sourse/normal1.jpg" width="270">
+        <img src="sourse/normal2.jpg" width="270">
     </div>
 </body>
 </html>
