--- a/網頁設計/normal.html
+++ b/網頁設計/normal.html
@@ -8,7 +8,7 @@
     </title>
 </head>
 <body style="background-color:rgb(50,70,30);">
-    <div>
+    <div align="center; margin-top: 30px">
         <img src="sourse/normal1.jpg" width="270">
         <img src="sourse/normal2.jpg" width="270">
     </div>
