--- a/網頁設計/ffcactus.html
+++ b/網頁設計/ffcactus.html
@@ -6,7 +6,7 @@
     <title>不一般的仙人掌</title>
 </head>
 <body style="background-color:rgb(50,70,30);">
-    <div align="center">
+    <div align="center"; margin-top: 30px">
         <img src="sourse/ff-cactus1.jpg" alt="仙人掌" width="270">
         <img src="sourse/ff-cactus2.jpg" alt="仙人掌" width="270">
         <img src="sourse/ff-cactus3.jpg" alt="仙人掌" width="270">
