--- a/網頁設計/index.html
+++ b/網頁設計/index.html
@@ -6,10 +6,10 @@
     <title>仙人掌網頁</title>
 </head>
 <body style="background-color:rgb(0,150,0);">
-    <div>
+    <div text-align:center>
         <img src="sourse/cactus.jpg" alt="仙人掌" width="180">
-        <a href="cactus.html">仙人掌咒語</a>
     </div>
     (我做的)↑
+    <p><a href="cactus.html">仙人掌咒語</a></p>
 </body>
 </html>
