--- a/網頁設計期中Dev-C++官網/index.html
+++ b/網頁設計期中Dev-C++官網/index.html
@@ -145,11 +145,11 @@
         <h1 class="title">適用於 Windows 的開源 C/C++ 整合式開發環境</h1>
     </div>
 
-    <div style="display: flex; margin-left: 15%;">
-        <div class="txt"><h2><a style="text-decoration: none;" href="index.html"><span style="color: rgb(59, 203, 155);">Dev-C++</span></a>是適用於 Windows 平台的全功能 C 和 C++ 整合開發環境 (IDE)。自1998 年第一個版本發布以來，數以百萬計的開發人員、學生和研究人員使用Dev-C++。它已出現在數十本C++ 和科學書籍中，並且仍然是全球大學和學校最喜愛的學習工具之一。</h2></div>
+    <div style="display: flex;">
+        <div class="txt" style="margin-left: 20%";><h2><a style="text-decoration: none;" href="index.html"><span style="color: rgb(59, 203, 155);">Dev-C++</span></a>是適用於 Windows 平台的全功能 C 和 C++ 整合開發環境 (IDE)。自1998 年第一個版本發布以來，數以百萬計的開發人員、學生和研究人員使用Dev-C++。它已出現在數十本C++ 和科學書籍中，並且仍然是全球大學和學校最喜愛的學習工具之一。</h2></div>
         <div class="pics">
-            <img style="margin-top: 30px; margin-left: 20px;" src="image/dcpp5_scr-1.png" alt="" width="400">
-            <img style="margin-top: 30px; margin-left: 20px;" src="image/content_Dev_C__官網.png" alt="" width="400">
+            <img style="margin-top: 10px;" src="image/dcpp5_scr-1.png" alt="" width="550">
+            <img style="margin-top: 10px;" src="image/content_Dev_C__官網.png" alt="" width="550">
         </div>
     </div>
 
@@ -178,14 +178,14 @@
         </div>
     </div>
 
-    <div style="border-top: solid 2px;margin: 20px 20px;"></div>
+    <div style="border-top: solid 2px;margin: 80px 20px;"></div>
 
-    <div class="a" style="display: flex;margin-top: 10px;">
+    <div class="a" style="display: flex;margin-top: 10px;margin-left: 100px;">
         <img style="margin-top: 25px;" src="image/bughlp.png" alt="" width="20" height="20">
         <h2 style="margin-left: 20px;">功能列表</h2>
     </div>
     <div class="a" style="display: flex;">
-        <ul>
+        <ul style="margin-left: 80px;">
             <li>適用於 Windows 系統的極其輕量且可移植的 C/C++ IDE</li>
             <li>支援基於 GCC 的編譯器（Mingw、Cygwin...）</li>
             <li>快速建立 Windows GUI 和控制台應用程式、靜態庫和 DLL</li>
@@ -196,7 +196,7 @@
             <li>支援分析</li>
             <li>有 30 多種語言版本</li>
         </ul>
-        <ul style="margin-left: 10%; margin-top: 10px;">
+        <ul style="margin-left: 10%;">
             <li>可自訂的程式碼編輯器</li>
             <li>專案管理</li>
             <li>用於建立您自己的專案類型的模板</li>
@@ -209,7 +209,7 @@
         </ul>
     </div>
 
-    <div style="border-top: solid 2px;margin: 20px 20px;"></div>
+    <div style="border-top: solid 2px;margin: 100px 20px;"></div>
 
     <div class="b" style="display: flex; margin-top: -10px;">
         <img style=" margin-top: 25px;" src="image/opnproj.png" alt="" width="20" height="20">
@@ -223,7 +223,7 @@
         </p>
     </div>
 
-    <div style="border-top: solid 2px;margin: 20px 30px;"></div>
+    <div style="border-top: solid 2px;margin: 100px 30px;"></div>
 
     <div class="c" style="display: flex; margin-top: -10px;">
         <img style="margin-top: 25px;" src="image/resrc.png" alt="" width="20" height="20">
@@ -234,11 +234,11 @@
         <p>主要貢獻者：<span style="font-weight: bold;">Mike Berg、Hongli Lai、Yiannis Mandravellos</span></p>
     </div>
 
-    <div style="border-top: solid 2px;margin: 20px 30px;"></div>
+    <div style="border-top: solid 2px;margin: 100px 30px;"></div>
 
     <div style="text-align: center; color: gray; margin-bottom: 50px;">版權所有 1998-2022 Colin Laplace（「Bloodshed Software」）</div>
-    <div style="text-align: center; color: gray;">期末作業：仿製Dev-C++中文官網(新增動畫)</div>
-    <div style="text-align: center; color: gray; margin-bottom: 50px;">11360695 葉庭妤</div>
+    <div style="text-align: center; color: gray;">仿製Dev-C++中文官網-葉庭妤</div>
+    <div style="text-align: center; color: gray; margin-bottom: 50px;">(原始官網在上層選單的Home)</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js"></script>
     <script src="jquery-3.7.1.min.js"></script>
     <script src="gsap-public/minified/gsap.min.js"></script>
