--- a/仿製Dev-C++官網/index.html
+++ b/仿製Dev-C++官網/index.html
@@ -237,8 +237,8 @@
     <div style="border-top: solid 2px;margin: 20px 30px;"></div>
 
     <div style="text-align: center; color: gray; margin-bottom: 50px;">版權所有 1998-2022 Colin Laplace（「Bloodshed Software」）</div>
-    <div style="text-align: center; color: gray;">期末作業：仿製Dev-C++中文官網(新增動畫)</div>
-    <div style="text-align: center; color: gray; margin-bottom: 50px;">11360695 葉庭妤</div>
+    <div style="text-align: center; color: gray;">仿製Dev-C++官網(中文版)</div>
+    <div style="text-align: center; color: gray; margin-bottom: 50px;">葉庭妤</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js"></script>
     <script src="jquery-3.7.1.min.js"></script>
     <script src="gsap-public/minified/gsap.min.js"></script>
