--- a/仿製民宿訂房網站/home.html
+++ b/仿製民宿訂房網站/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>主頁</title>
 </head>
 
 <body style="background-color: rgb(187, 211, 255);">
@@ -29,7 +29,7 @@
     <div style="text-align: center; margin-top: 100px;">
         <img src="images/關於我們/關於我們.png" alt="" width="320">
     </div>
-    <div style="text-indent: 2em; width:400px; margin-left:100px;margin-top:30px;
+    <div style="text-indent: 2em; width:400px; text-align: center;margin-top:30px;
                 float:left;">
         來到「76親子民宿」，映入眼簾的白色極簡約的建築物，猶如一個藏寶盒...進入藏寶盒後，
         將會展開一個猶如愛麗絲夢遊仙境般的奇幻旅程，隨著一把把不同的鑰匙開啟～ 而會有不同的奇遇，
