--- a/仿製民宿訂房網站/home.html
+++ b/仿製民宿訂房網站/home.html
@@ -4,7 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>主頁</title>
+    <title>Document</title>
+    <style>
+        .about-us-text {
+            text-align: center;
+            width: 60%;
+            margin: 30px auto;
+            text-indent: 2em;
+        }
+        .about-us-container {
+            text-align: center;
+            margin-top: 30px;
+        }
+        .about-us-image {
+            display: inline-block;
+            vertical-align: top;
+            margin: 30px 20px;
+        }
+    </style>
 </head>
 
 <body style="background-color: rgb(187, 211, 255);">
@@ -41,14 +58,15 @@
 
     <!-- 中間文字區塊 -->
     <div style="clear:both;"></div>
-    <div style="width:600px; text-align: center; margin:50px auto;">
-        <p>「76親子民宿」有著寬敞的空間及遼闊的視野，大大落地窗，採光充足</p>
-        <p>提供精緻早餐、美味迎賓下午茶、兒童電動車體驗，適合闔家旅遊度假></p>
-        <p>「76親子民宿」隨時歡迎大小朋友，一起來玩一起來度假！</p>
-    </div>
-
-    <div style="text-align: center; margin: 100px auto;">
-        <img src="images/關於我們/關於我們-圖1.png" alt="">
+    <div class="about-us-container">
+        <div class="about-us-image">
+            <img src="images/關於我們/關於我們-圖右.png" alt="" width="400">
+        </div>
+        <div class="about-us-text">
+            來到「76親子民宿」，映入眼簾的白色極簡約的建築物，猶如一個藏寶盒...進入藏寶盒後，
+            將會展開一個猶如愛麗絲夢遊仙境般的奇幻旅程，隨著一把把不同的鑰匙開啟～ 而會有不同的奇遇，
+            因而寫下一個個，屬於自己獨特的美麗故事，創造無價的回憶。
+        </div>
     </div>
 
      <!-- 頁底文字區塊 -->
