--- a/仿製民宿訂房網站/home.html
+++ b/仿製民宿訂房網站/home.html
@@ -43,14 +43,18 @@
     </div>
 
     <!-- 關於我們 -->
-    <div style="text-indent: 2em; width:400px; margin-left:400px;margin-top:30px;
-                float:left;">
-        來到「76親子民宿」，映入眼簾的白色極簡約的建築物，猶如一個藏寶盒...進入藏寶盒後，
-        將會展開一個猶如愛麗絲夢遊仙境般的奇幻旅程，隨著一把把不同的鑰匙開啟～ 而會有不同的奇遇，
-        因而寫下一個個，屬於自己獨特的美麗故事，創造無價的回憶。
-    </div>
     <div style="text-align: center; margin-top: 100px;">
         <img src="images/關於我們/關於我們.png" alt="" width="320">
+    </div>
+    <div class="about-us-container">        
+        <div class="about-us-text">
+            來到「76親子民宿」，映入眼簾的白色極簡約的建築物，猶如一個藏寶盒...進入藏寶盒後，
+            將會展開一個猶如愛麗絲夢遊仙境般的奇幻旅程，隨著一把把不同的鑰匙開啟～ 而會有不同的奇遇，
+            因而寫下一個個，屬於自己獨特的美麗故事，創造無價的回憶。
+        </div>
+        <div class="about-us-image">
+            <img src="images/關於我們/關於我們-圖右.png" alt="" width="400">
+        </div>
     </div>
 
     <!-- 中間文字區塊 -->
@@ -65,13 +69,6 @@
         <img src="images/關於我們/關於我們-圖1.png" alt="">
     </div>
 
-     <!-- 頁底文字區塊 -->
-    
-     <div style="width:600px; text-align: center; margin:50px auto;">
-        <p> 76親子民宿合法民宿1382號│訂房專線：0903-676-876│LINE ID：7676lovelife｜</p>
-        <p> Whats App：+886903676876│地址：宜蘭縣冬山鄉大進二路76號</p>
-        <p> Copyright 2016 &copy 76familybnb Inn All right reserved. 網頁設計：大翼國際整合行銷</p>
-     </div>
      <!-- 頁底文字區塊 -->
     
      <div style="width:600px; text-align: center; margin:50px auto;">
