--- a/首頁/index.html
+++ b/首頁/index.html
@@ -23,7 +23,7 @@
     </div>
     <div style="justify-content: center; gap: 10px; margin-top: 100px; text-align: center;">
         <h3>github原始檔：<a href="https://github.com/CactusFlowerXD/CactusFlowerXD.github.io">https://github.com/CactusFlowerXD/CactusFlowerXD.github.io</a></h3>
-        <h3>首頁：<a href="https://cactusflowerxd.github.io/%E9%A6%96%E9%A0%81/">https://github.com/CactusFlowerXD/CactusFlowerXD.github.io</a></h3>
+        <h3>首頁：<a href="https://cactusflowerxd.github.io/%E9%A6%96%E9%A0%81/">https://cactusflowerxd.github.io/%E9%A6%96%E9%A0%81/index.html</a></h3>
     </div>
 </body>
 </html>
